# zhizyy_github_pipe

./: .gitignore  README.md  nohup.out
server-agent/: .dockerignore  .env.example  Dockerfile  api-response.json  pyproject.toml
server-agent/app/: logging_config.py  main.py  security.py
server-agent/app/agent/: events.py  graph.py  service.py  state.py
server-agent/app/api/: sessions.py
server-agent/app/core/: config.py
server-agent/app/llm/: __init__.py  client.py  model_choice.py  prompts.py
server-agent/app/nodes/: __init__.py  context_builder.py  memory_writer.py  planner.py  reasoner.py  understanding.py
server-agent/app/persistence/: models.py  redis_state.py  repository.py
server-agent/app/rag/: embeddings.py  mock_retriever.py  qdrant_client.py  retriever.py  seed.py
server-agent/app/react/: __init__.py  prompts.py  runtime.py  schema.py
server-agent/app/runtime/: __init__.py  graph.py  orchestrator.py
server-agent/app/services/: __init__.py  export_intent_service.py  message_service.py  preference_memory_service.py  run_service.py  title_service.py  (+3 more)
server-agent/scripts/: seed_qdrant.py
server-agent/tests/: conftest.py  test_agent_graph.py  test_agent_state.py  test_health.py  test_llm_client.py  test_llm_nodes.py  test_logging_config.py  test_model_choice.py  test_persistence_models.py  test_postgres_migrations.py  test_preference_memory_service.py  test_rag_retriever.py  test_rag_seed.py  test_react_runtime.py  test_redis_state.py  test_runtime_flow.py  test_security.py  test_sessions_api.py  test_tool_adapters.py  test_tool_registry.py
(+831 files in other folders)
